--- a/gcc-4_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-4_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,13 @@
+2006-09-07  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gcc.target/i386/pr28946.c (dg-options): Use -Os instead -O.
+
+2006-09-20  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/28046
+	* gcc.dg/gomp/atomic-10.c: New test.
+	* g++.dg/gomp/atomic-10.C: New test.
+
 2006-09-15  Uros Bizjak  <uros@kss-loka.si>
 
 	PR target/28946
